{
    "name": "PTZControls",
    "maps": [
        {
            "name": "CameraSelection",
            "id": "757d50b8-a9ff-41d2-a17f-17fb4948a421",
            "actions": [
                {
                    "name": "SelectCamera1",
                    "type": "Button",
                    "id": "054c4ba4-3e2e-484b-a30c-93b488e17c5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectCamera2",
                    "type": "Button",
                    "id": "9d4e5189-407a-48e5-82b1-8e831dcbe655",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectCamera3",
                    "type": "Button",
                    "id": "9490f8a3-110f-4e85-b41b-3e0f553ad8a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectCamera4",
                    "type": "Button",
                    "id": "35329562-10f0-485c-a3d9-54a65a194e6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectCamera5",
                    "type": "Button",
                    "id": "8928fb96-d23b-425f-9fd9-f5ffdbb85373",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectCamera6",
                    "type": "Button",
                    "id": "a578d94b-e20e-4bda-a413-631e1032d97e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63497d1e-7340-4d15-aa5e-4d5ec26f980c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectCamera1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5b3dc23-ea3f-4688-a6c1-6f612d99551a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectCamera2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec4d72f4-b522-4b15-b715-65c322e20fd9",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectCamera3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cf5d6eb-69d3-4f02-b145-f17a5ec5af46",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectCamera4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "714d5f1b-5a03-4ce9-8c90-df969e71de0d",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectCamera5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f86801ea-fd35-4585-b2f3-35205cd0726b",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectCamera6",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ZoomControl",
            "id": "56701234-5670-5670-5670-f01234567890",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "67012345-6701-6701-6701-012345678901",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Q/E Keys",
                    "id": "70123456-7012-7012-7012-123456789012",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a4f9a264-64a6-419f-9f36-a8db89421ba8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e0de5439-d993-485f-875a-aa793ca8dcad",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad Triggers",
                    "id": "62ffa0b1-c07d-4f78-9ffe-7c7cc319f5d4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1728e0bc-4281-4fa5-b3d8-c000ad1488e1",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "45678901-4567-4567-4567-678901234567",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "FocusControl",
            "id": "56789012-5678-5678-5678-789012345678",
            "actions": [
                {
                    "name": "Focus",
                    "type": "Value",
                    "id": "67890123-6789-6789-6789-890123456789",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AutoFocus",
                    "type": "Button",
                    "id": "78901234-7890-7890-7890-901234567890",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "F/V Keys",
                    "id": "89012345-8901-8901-8901-012345678901",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Focus",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "90123456-9012-9012-9012-123456789012",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Focus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "01234567-0123-0123-0123-234567890123",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Focus",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "12345678-1234-1234-1234-345678901234",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Focus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23456789-2345-2345-2345-456789012345",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoFocus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34567890-3456-3456-3456-567890123456",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoFocus",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PresetControl",
            "id": "45678901-4567-4567-4567-678901234567",
            "actions": [],
            "bindings": []
        },
        {
            "name": "PTZMovement",
            "id": "3b3f9c07-5c65-4444-8b37-aaae1c8c105c",
            "actions": [
                {
                    "name": "CycleCameraNext",
                    "type": "Button",
                    "id": "081049ba-6272-4dc1-afbb-0fcfb4d60c21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleCameraPrevious",
                    "type": "Button",
                    "id": "3b870b5f-a71a-41f5-a49b-6707dafbe4d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc472fb2-0e55-4917-9595-0a8ad438502e",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CycleCameraNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e01b9e0f-db29-40e9-ac34-3dc8947dccf8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CycleCameraPrevious",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}